Switch to yarn to fix dependencies vulnerabilities

--- a/.github/workflows/funtions.yml
+++ b/.github/workflows/funtions.yml
@@ -19,10 +19,10 @@ jobs:
           echo "GCLOUD_PROJECT=${{ secrets.FIREBASE_PROJECT_ID }}" >> $GITHUB_ENV
       - uses: actions/setup-node@v3
         with:
-          cache: "npm"
-          cache-dependency-path: package-lock.json
+          cache: "yarn"
+          cache-dependency-path: yarn.lock
       - run: |
-          npm ci
-          npm run build -w functions
-          npx -q firebase use ${{ secrets.FIREBASE_PROJECT_ID }}
-          npx -q firebase deploy --only functions
+          yarn install --frozen-lockfile
+          yarn workspace functions run build
+          yarn exec firebase use ${{ secrets.FIREBASE_PROJECT_ID }}
+          yarn exec firebase deploy --only functions
