--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sa-leaderboard",
   "version": "0.1.0",
+  "private": true,
   "license": "Apache-2.0",
   "description": "Collects and display battle royal leaderboard per months",
   "author": "KuSh (https://github.com/KuSh)",
@@ -9,21 +10,24 @@
   "bugs": "https://github.com/KuSh/Twitch-SA-Leaderboard/issues",
   "engines": {
     "node": "^16",
-    "npm": "^8"
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start:emulators": "firebase emulators:start --only firestore --import .data --export-on-exit",
-    "start:functions": "npm run start -w functions",
-    "start:site": "npm run start -w site",
+    "start:functions": "yarn workspace functions run start",
+    "start:site": "yarn workspace site run start",
     "start": "npm-run-all --parallel start:**",
-    "check": "npm run check --workspaces --if-present",
-    "lint": "npm run lint --workspaces --if-present",
-    "format": "npm run format --workspaces --if-present",
-    "build": "npm run build --workspaces --if-present"
+    "check": "yarn run check --workspaces --if-present",
+    "lint": "yarn run lint --workspaces --if-present",
+    "format": "yarn run format --workspaces --if-present",
+    "build": "yarn run build --workspaces --if-present"
   },
   "devDependencies": {
     "firebase-tools": "^11.8.0",
     "npm-run-all": "^4.1.5"
+  },
+  "resolutions": {
+    "got": "^11.8.5"
   },
   "workspaces": [
     "site",
