--- a/tools/package.json
+++ b/tools/package.json
@@ -14,6 +14,7 @@
     "@faker-js/faker": "^7.5.0",
     "@tsconfig/node16-strictest": "^1.0.3",
     "@types/luxon": "^3.0.0",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "dotenv": "^16.0.2",
