--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   },
   "devDependencies": {
     "firebase-tools": "^13.7.2"
+  },
+  "resolutions": {
+    "protobufjs@>=7.0.0 <7.2.5": "^7.2.5"
   }
 }
