--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
   },
   "devDependencies": {
     "firebase-tools": "^13.24.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "path-to-regexp@<0.1.10": "^0.1.10",
+      "cookie@0.6.0": "^0.7.0"
+    }
   }
 }
